--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -125,69 +125,67 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-        <div class="box">
-            <div class="container">
-                <div class="row">
 
-                    <%data.map(d=>{%>
+        <div class="row">
 
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+            <%data.map(d=>{%>
 
-                        <div class="box-part text-center">
-
-                            <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
-
-                            <div class="title">
-                                <h3><%=d.name%></h3>
-                            </div>
-
-                            <div class="text">
-                                <span><%=d.phone%><br><%=d.address%><span>
-                            </div>
-
-                            <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
-
-                        </div>
-
-                        <div class="box-part text-center">
-
-                            <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
-
-                            <div class="title">
-                                <h3><%=d.name%></h3>
-                            </div>
-
-                            <div class="text">
-                                <span><%=d.phone%><br><%=d.address%><span>
-                            </div>
-
-                            <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
-
-                        </div>
-
-                        <div class="box-part text-center">
-
-                            <!-- <i class="fa fa-behance fa-3x" aria-hidden="true"></i> -->
-
-                            <div class="title">
-                                <h3><%=d.name%></h3>
-                            </div>
-
-                            <div class="text">
-                                <span><%=d.phone%><br><%=d.address%><span>
-                            </div>
-
-                            <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
-
-                        </div>
-                    </div>
-                    <% })%>
+            <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
 
 
 
+                <div class="title">
+                    <h3><%=d.name%></h3>
                 </div>
+
+                <div class="text">
+                    <span><%=d.phone%><br><%=d.address%><span>
+                </div>
+
+                <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
+
             </div>
+            <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
+
+
+
+                <div class="title">
+                    <h3><%=d.name%></h3>
+                </div>
+
+                <div class="text">
+                    <span><%=d.phone%><br><%=d.address%><span>
+                </div>
+
+                <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
+
+            </div>
+            <div class="col col-lg-4 col-md-4 col-sm-4 col-xs-4">
+
+
+
+                <div class="title">
+                    <h3><%=d.name%></h3>
+                </div>
+
+                <div class="text">
+                    <span><%=d.phone%><br><%=d.address%><span>
+                </div>
+
+                <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
+
+            </div>
+
+
+
+
+
+
+            <% })%>
         </div>
+
+
+     
         <div class="row">
             <div class="col col-sm-4">
                 <img src="/static/s1.jpeg" width="50px" height="60px">
