--- a/views/showshop.ejs
+++ b/views/showshop.ejs
@@ -101,8 +101,7 @@
     <center>
         <h3>Choose Shops
         </h3>
-
-
+    </center>
 
         <div id="carouselExampleControls" interval=100 class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -131,61 +130,19 @@
             <%data.map(d=>{%>
 
             <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
-
-
-
+                <a href="/order/make/<%=d._id%>">
+  
+                    <img width="80px" src="/static/<%=d.img%>" />
+                </a>              
                 <div class="title">
                     <h3><%=d.name%></h3>
                 </div>
-
-                <div class="text">
-                    <span><%=d.phone%><br><%=d.address%><span>
-                </div>
-
-                <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
-
-            </div>
-            <div class=" col col-lg-4 col-md-4 col-sm-4 col-xs-4">
-
-
-
-                <div class="title">
-                    <h3><%=d.name%></h3>
-                </div>
-
-                <div class="text">
-                    <span><%=d.phone%><br><%=d.address%><span>
-                </div>
-
-                <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
-
-            </div>
-            <div class="col col-lg-4 col-md-4 col-sm-4 col-xs-4">
-
-
-
-                <div class="title">
-                    <h3><%=d.name%></h3>
-                </div>
-
-                <div class="text">
-                    <span><%=d.phone%><br><%=d.address%><span>
-                </div>
-
-                <a href="/order/make/<%=d._id%>"><button class="btn btn-danger">Order</button></a>
-
-            </div>
-
-
-
-
-
-
+            </div>        
             <% })%>
         </div>
 
 
-     
+
         <div class="row">
             <div class="col col-sm-4">
                 <img src="/static/s1.jpeg" width="50px" height="60px">
@@ -214,7 +171,7 @@
 
 
         </div>
-    </center>
+   
 
 
 </body>
