--- a/views/register.ejs
+++ b/views/register.ejs
@@ -131,13 +131,13 @@
         	<input type="number" class="form-control" name="phone" placeholder="Number" required="required">
         </div>
         <div class="form-group">
-        	<textarea type="text" class="form-control" name="addresss" placeholder="Address" required="required"></textarea>
+        	<textarea type="text" class="form-control" name="address" placeholder="Address" required="required"></textarea>
         </div>
 		<!-- <div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password" required="required">
 		</div>        
 	 -->
-	 Image<input  class="form-control" type="file" name="file" size="50" />
+	 Image<input  class="form-control" type="file" name="file" size="50" required="required" />
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-lg btn-block">Register</button>
         </div>
