--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -91,6 +91,8 @@
                 <ul class="list-group">
                   <li class="list-group-item">Total Product :-<%=products.length%> </li>
                   <li class="list-group-item">Total Orders :-<%=order.length%></li>
+                  <li class="list-group-item">Revenue :-₹3000/-</li>
+
 
                 </ul>
               </p>
@@ -101,6 +103,7 @@
                 <ul class="list-group">
                   <li class="list-group-item">Total Product :-<%=products.length%> </li>
                   <li class="list-group-item">Total Orders :-<%=order.length%></li>
+                  <li class="list-group-item">Revenue :-₹50000/-</li>
 
                 </ul>
               </p>
@@ -111,7 +114,7 @@
                 <ul class="list-group">
                   <li class="list-group-item">Total Product :-<%=products.length%> </li>
                   <li class="list-group-item">Total Orders :-<%=order.length%></li>
-
+                  <li class="list-group-item">Revenue :-₹70000/-</li>
                 </ul>
               </p>
             </div>
@@ -119,6 +122,7 @@
           </div>
         </div>
         <div class="col col-md-6">
+
           <div class="card  ml-auto" style="width: 100%;">
             <img class="img-top" width="200px" height="200px" src="/static/<%=shop.img%>" alt="Card image cap">
             <div class="card-body">
@@ -132,12 +136,20 @@
               </p>
             </div>
           </div>
+          <br>
+          <div class="card-body">
+            <h5 class="card-title">Commission to <br>XYZ company </h5>
+            <p class="card-text">
+              <ul class="list-group">
+               
+                <li class="list-group-item">Ammount :-₹4000/-</li>
+              </ul>
+            </p>
+          </div>
         </div>
       </div>
     </div>
   </div>
-
-
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
