--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -150,6 +150,38 @@
       </div>
     </div>
   </div>
+  
+    <h1>Pending order</h1>
+    <table class="table" width="100%">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">ID</th>
+          <th scope="col">Price</th>
+          <th scope="col">Date</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>J63hs</td>
+          <td>5000</td>
+          <td>@Tue Aug 13 2019 12:16:01</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>r23tr</td>
+          <td>1000</td>
+          <td>@Tue Aug 13 2019 15:12:8</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>fq3r1</td>
+          <td>1200</td>
+          <td>@Tue Aug 13 2019 18:26:40</td>
+        </tr>
+      </tbody>
+    </table>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
